sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: ')' expected but '}' found.
      copie(i-j,i}
                 ^AlgInsertionSort:9: error: ';' expected but ')' found.
    )}
    ^